static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');

html {
    height: 100%;
    scroll-behavior: smooth;
}

body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Electrolize', sans-serif;
}

h1, h2, h3, h4 {
    font-weight: bold;
}

.navbar-nav {
    font-size: large;
}

.btn-link {
    color: black;
}

.btn-link:hover {
    color: #e85320;
}

.main-logo-link, .nav-link {
    width: fit-content;
    color: black;
}

.logo-font {
    text-transform: uppercase;
}

.red {
    color: #e85320;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

.hero-container {
	background: url('https://res.cloudinary.com/games-exclusives/image/upload/v1665160542/media/homepage_background.jpg') no-repeat center center;
	background-size: cover;
	height: 75vh;
	position: relative;
    margin-top: 20px;
	max-width: 100%;
}

.hero-info {
    text-shadow: white 1px 0 10px;
    text-align: center;
    position: relative;
    display: grid;
    top: 0;
    font-size: 45px;
    text-transform: uppercase;
}

.hero-text {
    top: 0;
}

.uppercap {
    font-size: xxx-large;
    color: #032c9f;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

/*...............................................Buttons, anchors, icons  */ 
.shop-now-btn {
    position: absolute;
    margin: 0;
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    left: 50%;
    bottom: 25%;
    background-color: white;
    box-shadow: yellow 2px 0 10px;
    padding-left: 20px;
    padding-right: 20px;
    font-size: x-large;
    font-weight: bolder;
    text-transform: uppercase;
}

.shop-now-btn, .btn-warning,
.btn-dark, .btn-danger,
.btn-info, .btn-black ,
.btn-outline-black, .btn-back {
    border-radius: 25px;
}

.btn-fav i {
    color: red;
}

.btn-dark {
    color: #fff;
    font-weight: bold;
    text-transform: uppercase;
    background-color: black;
    border-color: black;
}

.btn-danger {
    background: #e85320;
    text-transform: uppercase;
    justify-content: center;
}

.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-black {
    background: black;
    color: white;
}

.btn-back {
    color:#032c9f; 
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: rgb(134, 7, 7);
    color: white !important;
}

.shop-now-btn:hover,
.shop-now-btn:active,
.shop-now-btn:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus,
.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}

.scroll-link,
.update-link,
.remove-item {
    cursor: pointer;
}

a:hover {
    color: #e85320;
    text-decoration: none;
}

/*...............................................Scroll arrow in a circle */

.scroll-link {
    position: fixed;
    font-size: xxx-large;
    bottom: 10px;
    right: 10px;
}
   

/*...............................................Forms */

.form-group {
    margin-top: 1rem;
}

.form-group label {
    font-weight: bold;
}

.form-control {
    padding: 0.25rem 0.55rem;

}

.profile{
    font-size: medium;
}

/*...............................................Contact Form */

#contact-container {
}

/*...............................................Profile page */

.profile {
    text-transform: uppercase;
}

/*...............................................All Games page */

.game-card:hover {
   
    
}

/*...............................................Game Detail page */
.game-image {
    display: flex;
    justify-content: center;
}

.description {
    font-weight: bold;
}

.favourites-link {
    border: none;
    font-size: x-large;
    float: right;
}

.quantity {
    align-items: center;
}

/*...............................................Favourites page */

#games-display {
    margin-bottom: 5vh;
    padding: 10px;
}

.fa-trash {
    font-size: large;
}

.favourites-link {
    color: red;
}

/*...............................................Reviews */

.review-container {
    margin-top: 10px !important;
}

.modal-header {
    text-transform: uppercase;
}

.modal-body {
    font-size: medium;
    color: red;
}

/*...............................................Order confirmation page */

/*...............................................Footer */

body > footer {
    position: sticky;
    top: 100vh;
    clear: right;
}

footer.background {
    width: 100%;
    padding-top: 1rem;
    background-color: #e85320;
    padding:10px 70px 0px;
}	       

footer ul li{
   padding:5px 0px;
   text-decoration: none;
}

.copyright span , .links span , .social span {
  color: #FFF; 
  font-weight: 800; 
  padding-bottom: 10px; 
  margin-bottom: 20px;
  display: block;
  text-transform: uppercase;
  font-size: 20px;
}

.copyright li p , .links li a , .social li a {
   color:#FFF;
   text-decoration: none;
   font-size: 15px;
}

.social li {
   float: left;
}

.social li a {
    letter-spacing: 25px;
    font-size: x-large;
 }
 
.copyright , .links , .social {
   list-style: none;
}

.fa {
   color: white;
   margin-right: 15px;
   font-size: large;
   letter-spacing: 25px;
}

.social i:hover {
    transition: all, .3s ease-in-out;
    -webkit-transform: scale(1.5);
    transform: scale(1.5);
}

.links a:hover {
    font-size: 120%;
    font-weight: bold;
}

/*...............................................Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: black;
}
    

.allauth-form-inner-content input {
    border-color: #000;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}
/* ... */

